--- a/docs/manual.bib
+++ b/docs/manual.bib
@@ -590,13 +590,6 @@ author = "V.M. Velichko and N.G. Zagoruyko"
   publisher={ACM}
 }
 
-@article{naidan2015permutation,
-  title={Permutation Search Methods are Efficient, Yet Faster Search is Possible},
-  author={Naidan, Bilegsaikhan and Boytsov, Leonid and Nyberg, Eric},
-  journal={arXiv preprint arXiv:1506.03163},
-  year={2015}
-}
-
 @inproceedings{Fagin2003,
  author = {Fagin, Ronald and Kumar, Ravi and Sivakumar, D.},
  title = {Efficient Similarity Search and Classification via Rank Aggregation},
@@ -637,3 +630,20 @@ author = "V.M. Velichko and N.G. Zagoruyko"
   note={\url{http://is.muni.cz/publication/884893/en}},
   language={English}
 }
+
+@article{naidan2015permutation,
+  author    = {Bilegsaikhan Naidan and
+               Leonid Boytsov and
+               Eric Nyberg},
+  title     = {Permutation Search Methods are Efficient, Yet Faster Search is Possible},
+  journal   = {{PVLDB}},
+  volume    = {8},
+  number    = {12},
+  pages     = {1618--1629},
+  year      = {2015},
+  url       = {http://www.vldb.org/pvldb/vol8/p1618-naidan.pdf},
+  timestamp = {Fri, 14 Aug 2015 15:24:11 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/pvldb/NaidanBN15},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
