some doc changes

--- a/docs/manual.tex
+++ b/docs/manual.tex
@@ -89,7 +89,7 @@ Pittsburgh, PA, USA\\
 \maketitle
 
 {\begin{center}{\small \textbf{Maintainer}: Leonid Boytsov}\end{center}}
-{\begin{center}{Version 1.1}\end{center} 
+{\begin{center}{Version 1.5}\end{center} 
 {\begin{center}{{\today}}\end{center}}
 
 \begin{abstract}
@@ -243,6 +243,7 @@ it is also possible to compute an accuracy of a \knn based classification
 \subsection{Prerequisites}
 The Non-Metric Space Library was developed and tested on 64-bit Linux.
 Yet, almost all the code can be built and run on 64-bit Windows (two notable exceptions are: LSHKIT and NN-Descent).
+It should also be possible to build the library on MAC OS.
 Building the code requires a modern C++ compiler that supports \mbox{C++11}.
 Currently, we support GNU C++ ($\ge4.7$), Intel compiler ($\ge14$), 
 Clang ($\ge3.4$), 
