Mostly manual updates #64

--- a/docs/manual.bib
+++ b/docs/manual.bib
@@ -647,3 +647,16 @@ author = "V.M. Velichko and N.G. Zagoruyko"
   bibsource = {dblp computer science bibliography, http://dblp.org}
 }
 
+@ARTICLE{Malkov2016,
+   author = {{Malkov}, Y.~A. and {Yashunin}, D.~A.},
+    title = "{Efficient and robust approximate nearest neighbor search using Hierarchical Navigable Small World graphs}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1603.09320},
+ primaryClass = "cs.DS",
+ keywords = {Computer Science - Data Structures and Algorithms, Computer Science - Computer Vision and Pattern Recognition, Computer Science - Information Retrieval, Computer Science - Social and Information Networks},
+     year = 2016,
+    month = mar,
+   adsurl = {http://adsabs.harvard.edu/abs/2016arXiv160309320M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
